[package]
name = "termdex"
version = "0.1.0"
edition = "2021"

[dependencies]
fuzzy-matcher = "0.3.7"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
serde_derive = "1.0.152"
crossterm = "0.26.1"
terminal_size = "0.2.5"

[dependencies.reqwest]
version = "^0.10" # latest version at time of writing
features = ["blocking", "json"]

# Fancy rust stuff for small executable :D #
[profile.release]
strip = true
opt-level = "z"
codegen-units = 1
lto = "fat"
panic = "abort"
